@@ -271,3 +271,12 @@ CB_CONFIG_SUPPORT (cb_define_constant_directive, "define-constant-directive",
 
 CB_CONFIG_SUPPORT (cb_free_redefines_position, "free-redefines-position",
 	_("REDEFINES clause not following entry-name in definition"))
+
+CB_CONFIG_SUPPORT (cb_record_delimiter, "record-delimiter",
+	_("RECORD DELIMITER clause"))
+
+CB_CONFIG_SUPPORT (cb_sequential_delimiters, "sequential-delimiters",
+	_("BINARY-SEQUENTIAL and LINE-SEQUENTIAL phrases in RECORD DELIMITER"))
+
+CB_CONFIG_SUPPORT (cb_record_delim_with_fixed_recs, "record-delim-with-fixed-recs",
+	_("RECORD DELIMITER clause on file with fixed-length records"))
