@@ -208,6 +208,9 @@ numeric-value-for-edited-item:		error
 incorrect-conf-sec-order:		error
 define-constant-directive:		unconformable
 free-redefines-position:		unconformable
+record-delimiter:			ignore
+sequential-delimiters:			unconformable
+record-delim-with-fixed-recs:		unconformable
 
 
 # use fixed word list, synonyms and exceptions specified there
