@@ -205,6 +205,9 @@ numeric-value-for-edited-item:		error
 incorrect-conf-sec-order:		error
 define-constant-directive:		error
 free-redefines-position:		unconformable
+record-delimiter:			ok
+sequential-delimiters:			ok
+record-delim-with-fixed-recs:		unconformable
 
 # archaic in COBOL2002 and currently not available as dialect features:
 # 1: MOVE of alphanumeric figurative constants to numeric items
