@@ -75,6 +75,7 @@ reserved:	BINARY
 reserved:	BINARY-CHAR
 reserved:	BINARY-DOUBLE
 reserved:	BINARY-LONG
+reserved:	BINARY-SEQUENTIAL*	# implementor RECORD DELIMITER word
 reserved:	BINARY-SHORT
 reserved:	BIT
 reserved:	BLANK
@@ -278,6 +279,7 @@ reserved:	LINAGE
 reserved:	LINAGE-COUNTER
 reserved:	LINE
 reserved:	LINE-COUNTER
+reserved:	LINE-SEQUENTIAL*	# implementor RECORD DELIMITER word
 reserved:	LINES
 reserved:	LINKAGE
 reserved:	LOCAL-STORAGE
