@@ -205,6 +205,9 @@ numeric-value-for-edited-item:		error
 incorrect-conf-sec-order:		error
 define-constant-directive:		error
 free-redefines-position:		unconformable
+record-delimiter:			ok
+sequential-delimiters:			ok
+record-delim-with-fixed-recs:		unconformable
 
 
 # use fixed word list, synonyms and exceptions specified there
