@@ -201,7 +201,7 @@ numeric-boolean:			ok
 hexadecimal-boolean:			ok
 national-literals:			ok
 hexadecimal-national-literals:		ok
-acu-literals:			unconformable
+acu-literals:				unconformable
 word-continuation:			warning
 not-exception-before-exception:		ok
 accept-display-extensions:		ok
@@ -214,6 +214,9 @@ numeric-value-for-edited-item:		ok
 incorrect-conf-sec-order:		ok
 define-constant-directive:		archaic
 free-redefines-position:		warning
+record-delimiter:			ok
+sequential-delimiters:			ok
+record-delim-with-fixed-recs:		ok
 
 
 # use complete word list; synonyms and exceptions are specified below
