@@ -208,6 +208,9 @@ numeric-value-for-edited-item:		error
 incorrect-conf-sec-order:		ok
 define-constant-directive:		unconformable
 free-redefines-position:		ok
+record-delimiter:			ok
+sequential-delimiters:			ok
+record-delim-with-fixed-recs:		ok
 
 
 # use fixed word list, synonyms and exceptions specified there
